--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -131,7 +131,7 @@
                                 <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</div>
                                 <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ (contract.level * contract.hero.manaMaintenance)|nf }}</div>
                                 {# row #}
-                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{% if contract.hero.skill %}{{ contract.hero.skill.description|raw }}{% else %}Ninguna{% endif %}</div>
+                                <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ contract.hero.skill.description|raw }}</div>
                                 {# row #}
                                 <div class="col-xs-12 text-lore"><small><i>{{ contract.hero.lore }}</i></small></div>
                             </div>
