--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -80,6 +80,38 @@
             </div>
         </div>
         {% endfor %}
+        {% for contract in player.contracts %}
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-{{ contract.hero.faction.class }}">
+                <div class="panel-heading text-center"><i class="fa fa-fw fa-user"></i><a href="{{ path( 'archmage_game_home_help' ) }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a> <i class="fa fa-fw fa-star"></i>{{ contract.level }}</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="custom-thumbnail" src="{{ asset( contract.hero.image ) }}" />
+                        </div>
+                        <div class="col-xs-8 text-padded">
+                            {# row #}
+                            <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ (contract.level * contract.hero.goldMaintenance)|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</div>
+                            <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ (contract.level * contract.hero.manaMaintenance)|nf }}</div>
+                            {# row #}
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ contract.hero.skill.description|raw }}</div>
+                            {# row #}
+                            <div class="col-xs-12 text-lore"><small><i>{{ contract.hero.lore }}</i></small></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer text-center">
+                    <form id="contract{{ contract.id }}" name="contract{{ contract.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_army_disband') }}" method="post">
+                        <div class="form-group has-feedback">
+                            <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-user-times"></i>Desbandar</button>
+                            <input type="hidden" id="contract" name="contract" value="{{ contract.id }}" required />
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
