--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -65,8 +65,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 {% if not research.spell.skill.self and not research.spell.skill.battle %}
-                                <select class="form-control selectpicker show-tick dropup" id="target" name="target" data-live-search="true" data-size="5">
-                                    <option>Objetivo</option>
+                                <select class="form-control selectpicker show-tick dropup" id="target" name="target" data-live-search="true" data-size="5" title="Objetivo">
                                     {% for target in targets if target != player %}
                                         <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
                                     {% endfor %}
