--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -21,7 +21,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro mago para robarle <span class="label label-extra">Tierras</span> y <span class="label label-extra">Oro</span>. No puedes atacar a otro mago mucho más débil (-20% poder o menos) que tú. Las cifras indican Ataque, Defensa, Velocidad, Mantenimientos, Familia y Tipo.</div>
+                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro mago para robarle <span class="label label-extra">Tierras</span> y <span class="label label-extra">Oro</span>. No puedes atacar a otro mago mucho más débil que tú, ni atacar al mismo mago 2 veces en menos de 12h, aunque todo ataque otorga el derecho a un contraataque.</div>
                             </div>
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                                 <div class="form-group">
                                     <div class="input-group">
                                         <select class="form-control selectpicker show-tick dropup" id="target" name="target" data-live-search="true" data-size="5" title="Objetivo">
-                                            {% for target in targets if target != player and player.power < target.power * 1.20 %}
+                                            {% for target in targets if target != player %}
                                             <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
                                             {% endfor %}
                                         </select>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             {% for troop in player.troops if troop.quantity > 0 %}
-            <div class="col-xs-12 col-md-6" style="z-index:1;">
+            <div class="col-xs-12 col-md-6">
                 <div class="panel panel-{{ troop.unit.faction.class }}">
                     <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a> [{{ troop.quantity|nf }}]</div>
                     <div class="panel-body text-responsive">
