--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,6 +38,15 @@
             <i class="fa fa-fw fa-exclamation-triangle"></i>{{ error.message }}
         </div>
         {% endif %}
+        {# los mensajes tipo INFO deberian salir siempre arriba del todo #}
+        {% for flashMessage in app.session.flashbag.get('info') %}
+        <div class="col-xs-12 alert alert-info alert-dismissible text-center text-responsive" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="close"><i class="fa fa-fw fa-times-circle"></i></button>
+            {# |raw para que pase por el controlador codigos html como <a href>, sino los trunca #}
+            <i class="fa fa-fw fa-exclamation-triangle"></i>{{ flashMessage|raw }}
+        </div>
+        {% endfor %}
+        {# Tras esto van todos los demas mensajes (normalmente success y danger) #}
         {% for type, flashMessages in app.session.flashbag.all() %}
             {% for flashMessage in flashMessages %}
         <div class="col-xs-12 alert alert-{{ type }} alert-dismissible text-center text-responsive" role="alert">
