--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -25,7 +25,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="panel-middle text-center">Opciones</div>
+                    <div class="panel-middle text-center">Fórmula</div>
+                    <div class="panel-body text-responsive text-only text-center">
+                        <p>PROB<sub>éxito</sub> = MIN (75, DEFENSA FÍSICA<sub>jugador</sub>)</p>
+                    </div>
+                    <div class="panel-middle text-center">Detalles</div>
                     <div class="panel-body text-center">
                         <div class="row">
                             <div class="col-xs-12">
