--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -13,14 +13,14 @@
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
             <div class="panel panel-default">
-                <div class="panel-heading text-center">Comprar tropas</div>
+                <div class="panel-heading text-center">Mercenarios</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Oro</span> para reclutar tropas simples para tu ejército. Cuantos más <span class="label label-extra">Barracones</span> tengas, más tropas reclutarás por turno. No puedes tener más de 5 tropas al mismo tiempo.</div>
+                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Oro</span> para reclutar tropas simples de muy bajo <span class="label label-extra">Ataque</span> y <span class="label label-extra">Defensa</span>. Cuantos más <span class="label label-extra">Barracones</span> tengas, más mercenarios reclutarás por turno. No puedes tener más de 5 tropas distintas al mismo tiempo.</div>
                         </div>
                     </div>
                 </div>
