--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -177,7 +177,7 @@
                             {# row #}
                             <div class="col-xs-12">{% if player.research %}<i class="fa fa-fw fa-magic"></i><span class="label label-{{ player.research.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.research.spell.name|slug }}" class="link">{{ player.research.spell.name }}</a></span>{% else %}Ningún hechizo en defensa{% endif %}</div>
                             {# row #}
-                            <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><span class="label label-{{ player.item.artifact.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.item.spell.name|slug }}" class="link">{{ player.item.spell.name }}</a></span>{% else %}Ningún artefacto en defensa{% endif %}</div>
+                            <div class="col-xs-12">{% if player.item %}<i class="fa fa-fw fa-diamond"></i><span class="label label-{{ player.item.artifact.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ player.item.artifact.name|slug }}" class="link">{{ player.item.artifact.name }}</a></span>{% else %}Ningún artefacto en defensa{% endif %}</div>
                         </div>
                     </div>
                 </div>
@@ -218,20 +218,23 @@
                         <thead>
                             <tr>
                                 <th class="text-center" colspan="3"></th>
-                                <th class="text-center" colspan="3">Ganancia</th>
-                                <th class="text-center" colspan="3">Pérdida</th>
-                                <th class="text-center" colspan="3">Total</th>
+                                <th class="text-center" colspan="4">Ganancia</th>
+                                <th class="text-center" colspan="4">Pérdida</th>
+                                <th class="text-center" colspan="4">Total</th>
                             </tr>
                             <tr>
                                 <th class="text-center">Posesión</th>
-                                <th class="text-center">?</th>
-                                <th class="text-center"><i class="fa fa-fw fa-rocket"></i></th>
+                                <th class="text-center">#</th>
+                                <th class="text-center">Poder</th>
+                                <th class="text-center"><i class="fa fa-fw fa-globe"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-money"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-group"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-tint"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-globe"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-money"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-group"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-tint"></i></th>
+                                <th class="text-center"><i class="fa fa-fw fa-globe"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-money"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-group"></i></th>
                                 <th class="text-center"><i class="fa fa-fw fa-tint"></i></th>
@@ -242,13 +245,16 @@
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-home"></i><span class="label label-extra"><a href="{{ path('archmage_game_home_help') }}#{{ construction.building.name|slug }}" class="link">{{ construction.building.name }}</a></span></td>
                                 <td class="text-right">{{ construction.quantity|nf }}</td>
-                                <td class="text-right">+{{ (construction.quantity * construction.building.power)|nf }}</td>
-                                <td class="text-right">+{{ (construction.quantity * construction.building.goldResource)|nf }}</td>
-                                <td class="text-right">+{{ (construction.quantity * construction.building.peopleResource)|nf }}</td>
-                                <td class="text-right">+{{ (construction.quantity * construction.building.manaResource)|nf }}</td>
+                                <td class="text-right">{{ (construction.quantity * construction.building.power)|nf }}</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right">{{ (construction.quantity * construction.building.goldResource)|nf }}</td>
+                                <td class="text-right">{{ (construction.quantity * construction.building.peopleResource)|nf }}</td>
+                                <td class="text-right">{{ (construction.quantity * construction.building.manaResource)|nf }}</td>
+                                <td class="text-right">-0</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (construction.quantity * construction.building.manaMaintenance)|nf }}</td>
+                                <td class="text-right">0</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.goldResource - construction.quantity * construction.building.goldMaintenance)|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.peopleResource - construction.quantity * construction.building.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">{{ (construction.quantity * construction.building.manaResource - construction.quantity * construction.building.manaMaintenance)|nf }}</td>
@@ -258,13 +264,16 @@
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-group"></i><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}" class="link">{{ troop.unit.name }}</a></span></td>
                                 <td class="text-right">{{ troop.quantity|nf }}</td>
-                                <td class="text-right">+{{ (troop.quantity * troop.unit.power)|nf }}</td>
+                                <td class="text-right">{{ (troop.quantity * troop.unit.power)|nf }}</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">0</td>
                                 <td class="text-right">0</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right">-0</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.manaMaintenance)|nf }}</td>
+                                <td class="text-right">0</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (troop.quantity * troop.unit.manaMaintenance)|nf }}</td>
@@ -274,13 +283,16 @@
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-user"></i><span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}" class="link">{{ contract.hero.name }}</a></span></td>
                                 <td class="text-right">{{ contract.level|nf }}</td>
+                                <td class="text-right">{{ (contract.level * contract.hero.power)|nf }}</td>
                                 <td class="text-right">0</td>
-                                <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}+{{ (contract.level * contract.hero.skill.goldBonus)|nf }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}+{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}{% else %}0{% endif %}%</td>
-                                <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}+{{ (contract.level * contract.hero.skill.manaBonus)|nf }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if contract.hero.skill.goldBonus > 0 %}{{ (contract.level * contract.hero.skill.goldBonus)|nf }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if contract.hero.skill.peopleBonus > 0 %}{{ (contract.level * contract.hero.skill.peopleBonus)|nf }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if contract.hero.skill.manaBonus > 0 %}{{ (contract.level * contract.hero.skill.manaBonus)|nf }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">-0</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
+                                <td class="text-right">0</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.goldMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.peopleMaintenance)|nf }}</td>
                                 <td class="text-right">-{{ (contract.level * contract.hero.manaMaintenance)|nf }}</td>
@@ -289,17 +301,39 @@
                             {% for enchantment in player.enchantmentsOwner %}
                             <tr>
                                 <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> a <span class="label label-{{ enchantment.victim.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.victim.id}) }}" class="link">{{ enchantment.victim.nick }}</a></span></td>
+                                <td class="text-right">{{ player.magic|nf }}</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right">0%</td>
+                                <td class="text-right">0%</td>
+                                <td class="text-right">0%</td>
+                                <td class="text-right">-0</td>
+                                <td class="text-right">-{{ (enchantment.spell.goldMaintenance * enchantment.owner.magic)|nf }}</td>
+                                <td class="text-right">-{{ (enchantment.spell.peopleMaintenance * enchantment.owner.magic)|nf }}</td>
+                                <td class="text-right">-{{ (enchantment.spell.manaMaintenance * enchantment.owner.magic)|nf }}</td>
+                                <td class="text-right">0</td>
+                                <td class="text-right">-{{ (enchantment.spell.goldMaintenance * enchantment.owner.magic)|nf }}</td>
+                                <td class="text-right">-{{ (enchantment.spell.peopleMaintenance * enchantment.owner.magic)|nf }}</td>
+                                <td class="text-right">-{{ (enchantment.spell.manaMaintenance * enchantment.owner.magic)|nf }}</td>
+                            </tr>
+                            {% endfor %}
+                            {% for enchantment in player.enchantmentsVictim %}
+                            <tr>
+                                <td class="text-left"><i class="fa fa-fw fa-link"></i><span class="label label-{{ enchantment.spell.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></span> de <span class="label label-{{ enchantment.owner.faction.class }}"><a href="{{ path('archmage_game_account_profile', {'id': enchantment.owner.id}) }}" class="link">{{ enchantment.owner.nick }}</a></span></td>
                                 <td class="text-right">{{ enchantment.owner.magic|nf }}</td>
                                 <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">0</td>
-                                <td class="text-right">-{{ (enchantment.spell.goldMaintenance * enchantment.owner.magic)|nf }}</td>
-                                <td class="text-right">-{{ (enchantment.spell.peopleMaintenance * enchantment.owner.magic)|nf }}</td>
-                                <td class="text-right">-{{ (enchantment.spell.manaMaintenance * enchantment.owner.magic)|nf }}</td>
-                                <td class="text-right">-{{ (enchantment.spell.goldMaintenance * enchantment.owner.magic)|nf }}</td>
-                                <td class="text-right">-{{ (enchantment.spell.peopleMaintenance * enchantment.owner.magic)|nf }}</td>
-                                <td class="text-right">-{{ (enchantment.spell.manaMaintenance * enchantment.owner.magic)|nf }}</td>
+                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}0{% endif %}</td>
+                                <td class="text-right">{% if enchantment.spell.skill.goldBonus > 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.peopleBonus > 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.manaBonus > 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus < 0 %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% else %}-0{% endif %}</td>
+                                <td class="text-right">{% if enchantment.spell.skill.goldBonus < 0 %}{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.peopleBonus < 0 %}{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.manaBonus < 0 %}{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}{% else %}-0{% endif %}%</td>
+                                <td class="text-right">{% if enchantment.spell.skill.terrainBonus > 0 %}{{ enchantment.spell.skill.terrainBonus }}{% else %}{{ enchantment.spell.skill.terrainBonus * enchantment.owner.magic }}{% endif %}</td>
+                                <td class="text-right">{{ enchantment.spell.skill.goldBonus * enchantment.owner.magic }}%</td>
+                                <td class="text-right">{{ enchantment.spell.skill.peopleBonus * enchantment.owner.magic }}%</td>
+                                <td class="text-right">{{ enchantment.spell.skill.manaBonus * enchantment.owner.magic }}%</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -307,12 +341,15 @@
                             <tr>
                                 <td class="text-center" colspan="2">Total</td>
                                 <td class="text-right">{{ player.power|nf }}</td>
+                                <td class="text-right">{{ player.terrainResourcePerTurn|nf }}</td>
                                 <td class="text-right">{{ player.goldResourcePerTurn|nf }}</td>
                                 <td class="text-right">{{ player.peopleResourcePerTurn|nf }}</td>
                                 <td class="text-right">{{ player.manaResourcePerTurn|nf }}</td>
-                                <td class="text-right">-{{ player.goldMaintenancePerTurn|nf }}</td>
-                                <td class="text-right">-{{ player.peopleMaintenancePerTurn|nf }}</td>
-                                <td class="text-right">-{{ player.manaMaintenancePerTurn|nf }}</td>
+                                <td class="text-right">{{ player.terrainMaintenancePerTurn|nf }}</td>
+                                <td class="text-right">{{ player.goldMaintenancePerTurn|nf }}</td>
+                                <td class="text-right">{{ player.peopleMaintenancePerTurn|nf }}</td>
+                                <td class="text-right">{{ player.manaMaintenancePerTurn|nf }}</td>
+                                <td class="text-right"><span class="label label-{% if (player.terrainResourcePerTurn - player.terrainMaintenancePerTurn) >= 0 %}success{% else %}danger{% endif %}">{{ (player.terrainResourcePerTurn - player.terrainMaintenancePerTurn)|nf }}</span></td>
                                 <td class="text-right"><span class="label label-{% if (player.goldResourcePerTurn - player.goldMaintenancePerTurn) >= 0 %}success{% else %}danger{% endif %}">{{ (player.goldResourcePerTurn - player.goldMaintenancePerTurn)|nf }}</span></td>
                                 <td class="text-right"><span class="label label-{% if (player.peopleResourcePerTurn - player.peopleMaintenancePerTurn) >= 0 %}success{% else %}danger{% endif %}">{{ (player.peopleResourcePerTurn - player.peopleMaintenancePerTurn)|nf }}</span></td>
                                 <td class="text-right"><span class="label label-{% if (player.manaResourcePerTurn - player.manaMaintenancePerTurn) >= 0 %}success{% else %}danger{% endif %}">{{ (player.manaResourcePerTurn - player.manaMaintenancePerTurn)|nf }}</span></td>
