Funcionando counters y proteccion de 12h. Primera beta terminada. Inicio de la segunda beta.

--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -21,7 +21,7 @@
                 <div class="info">
                     <h1 class="text-center">{{ profile.nick }}</h1>
                     {% if profile == player %}
-                        Conecta con <a href="https://telegram.org/" class="link">Telegram</a> agregando a <a href="http://telegram.me/archmagebot" class="link">@ArchmageBot</a> y escribiéndole '{{ profile.telegram }}' |
+                        {% if not player.chat %}Conecta con <a href="https://telegram.org/" class="link">Telegram</a> agregando a <a href="http://telegram.me/archmagebot" class="link">@ArchmageBot</a> y escribiéndole '{{ profile.telegram }}'{% else %}Conectado con <a href="https://telegram.org/" class="link">Telegram</a>{% endif %} |
                         <a href="{{ path('fos_user_change_password') }}" class="link">Cambiar contraseña</a>
                         <br>
                     {% endif %}
