--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -21,7 +21,7 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro mago para robarle <span class="label label-extra">Tierras</span> y <span class="label label-extra">Oro</span>. No puedes atacar a otro mago mucho más débil que tú, ni atacar al mismo mago 2 veces en menos de 12h, aunque todo ataque otorga el derecho a un contraataque.</div>
+                                <div class="col-xs-12">Aquí puedes gastar 2 <span class="label label-extra">Turnos</span> y atacar a otro mago para robarle <span class="label label-extra">Tierras</span> y <span class="label label-extra">Oro</span>. No puedes atacar a un mago mucho más débil que tú, ni atacar al mismo mago 2 veces en menos de 12h, pero todo ataque otorga el derecho a un contraataque.</div>
                             </div>
                         </div>
                     </div>
