Arreglado bug en registrationcontroller por un mensaje que se leia mal. Arreglado typo en skillfixtures. Cambiados textos de ayuda en Auctiony Turns Command. Ahora ranking muestra los 20 primeros.

--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -44,6 +44,7 @@
             "order": [[ 0, "asc" ]],
             "sDom": 't<"col-xs-12 text-center"fp>',
             "displayStart": 0,
+            "pageLength": 50,
             'pagingType': 'full_numbers',
             "language": {
                 "decimal": ",",
