Arreglado bug de ordenacion en datatables para los datetime. Estaba usando date en lugar de date-euro. Ahora funciona bien tanto en chrome como en firefox.

--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -49,7 +49,7 @@
         $('#datatable').dataTable({
             "order": [[ 0, "desc" ]],
             "aoColumns": [
-                {"sType": "date", "bSortable": true },
+                {"sType": "date-euro", "bSortable": true },
                 {"sType": "string", "bSortable": true },
                 {"sType": "string", "bSortable": true }
             ],
