--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -55,6 +55,7 @@
             ],
             "sDom": 't<"col-xs-12 text-center"fp>',
             "displayStart": 0,
+            "pageLength": 20,
             'pagingType': 'full_numbers',
             "language": {
                 "sProcessing": "Procesando...",
