--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -66,7 +66,7 @@
                                 <div class="input-group-btn">
                                     <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-money"></i>Reclutar</button>
                                 </div>
-                                <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="" value="0" required />
+                                <input type="number" class="form-control" id="quantity" name="quantity" min="1" max="{{ player.gold / unit.goldRecruit }}" value="" placeholder="0" required />
                                 <input type="hidden" id="unit" name="unit" value="{{ unit.id }}" required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
