--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -66,7 +66,7 @@
                                 <div class="input-group-btn">
                                     <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Investigar</button>
                                 </div>
-                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.researchRatio(research.spell.turnsResearch) }}" value="" placeholder="0" required/>
                                 <input type="hidden" id="research" name="research" value="{{ research.id }}" required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
@@ -111,7 +111,7 @@
                                 <div class="input-group-btn">
                                     <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Investigar</button>
                                 </div>
-                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.researchRatio(spell.turnsResearch) }}" value="" placeholder="0" required/>
                                 <input type="hidden" id="spell" name="spell" value="{{ spell.id }}" required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
