--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -60,7 +60,7 @@
                                 <div class="input-group-btn">
                                     <button type="submit" class="btn btn-default" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %}><i class="fa fa-fw fa-wrench"></i>Construir</button>
                                 </div>
-                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ player.construction('Tierras').quantity }}" value="0" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %} required />
+                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ min(player.construction('Tierras').quantity, player.gold / max(construction.building.goldCost, 1), player.people / max(construction.building.peopleCost, 1), player.mana / max(construction.building.manaCost, 1)) }}" value="" placeholder="0" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %} required />
                                 <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if player.construction('Tierras').quantity <= 0 %}disabled{% endif %} required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
