--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -35,7 +35,7 @@
                                         <div class="input-group-btn">
                                             <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-hourglass-half"></i>Explorar</button>
                                         </div>
-                                        <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                        <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="" placeholder="0" required/>
                                         <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                     </div>
                                 </div>
