Arreglado bug en twig por el cual no salia el lore. Ahora los encantamientos muestran su informacion calculada con respecto al nivel de magia del jugador.

--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -56,6 +56,8 @@
                             {% endif %}
                             {# row #}
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ research.spell.skill.description|raw }}</div>
+                            {# row #}
+                            <div class="col-xs-12 text-lore"><small><i>{{ spell.lore }}</i></small></div>
                         </div>
                     </div>
                 </div>
