Cambiados algunos titulos que estaban mal.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <title>Archmage - {% block title %}{% endblock %}</title>
+        <title>ArchMage - {% block title %}{% endblock %}</title>
         {# block css #}
         {% block stylesheets %}
             {# con los css no funciona el @Bundle shortcut #}
