--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -1,6 +1,6 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Territorio{% endblock %}
+{% block title %}Explorar{% endblock %}
 
 {% block body %}
 <div class="container">
