--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -1,6 +1,6 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Reino{% endblock %}
+{% block title %}Resumen{% endblock %}
 
 {% block body %}
 <div class="container">
