--- a/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Archmage/UserBundle/Resources/views/Security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends "ArchmageUserBundle::layout.html.twig" %}
 
-{% block title %}Bienvenid@{% endblock %}
+{% block title %}Entrar{% endblock %}
 
 {% block fos_user_content %}
 <div class="container">
