Intentando arreglar un error con la fuente custom de fontface en windows.

--- a/src/Archmage/GameBundle/Resources/public/css/font.css
+++ b/src/Archmage/GameBundle/Resources/public/css/font.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'AntykwaTorunskaBold';
+    font-family: 'AntykwaTorunskaRegular';
     font-style: normal;
     font-weight: 500;
     src:
