--- a/src/Archmage/GameBundle/Resources/public/css/theme.css
+++ b/src/Archmage/GameBundle/Resources/public/css/theme.css
@@ -1072,7 +1072,7 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-    font-family: AntykwaTorunskaBold;
+    font-family: AntykwaTorunskaRegular;
     font-size: 16px;
     line-height: 1.42857143;
     color: #ffffff;
@@ -1174,7 +1174,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family: AntykwaTorunskaBold;
+    font-family: AntykwaTorunskaRegular;
     font-weight: 500;
     line-height: 1.1;
     color: inherit;
@@ -1522,7 +1522,7 @@ code,
 kbd,
 pre,
 samp {
-    font-family: AntykwaTorunskaBold;
+    font-family: AntykwaTorunskaRegular;
 }
 code {
     padding: 2px 4px;
@@ -6008,7 +6008,7 @@ button.close {
     position: absolute;
     z-index: 1030;
     display: block;
-    font-family: AntykwaTorunskaBold;
+    font-family: AntykwaTorunskaRegular;
     font-style: normal;
     font-weight: normal;
     letter-spacing: normal;
@@ -6126,7 +6126,7 @@ button.close {
     display: none;
     max-width: 276px;
     padding: 1px;
-    font-family: AntykwaTorunskaBold;
+    font-family: AntykwaTorunskaRegular;
     font-style: normal;
     font-weight: normal;
     letter-spacing: normal;
