Cambiado a moment.js para ordenar por fecha en datatables.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -88,6 +88,7 @@
         {% javascripts filter='uglifyjs2' output='js/base.min.js'
             'bower/jquery/jquery.js'
             'bower/datatables/media/js/jquery.dataTables.js'
+            'bower/moment/moment.js'
             'bower/datatables-bootstrap3-plugin/media/js/datatables-bootstrap3.js'
             'bower/bootstrap/dist/js/bootstrap.js'
             'bower/bootstrap-select/dist/js/bootstrap-select.js'
