--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -30,7 +30,8 @@
                     {% for achievement in profile.achievements %}
                     <div class="col-xs-12 col-md-5 col-md-offset-{% if loop.index is odd %}0{% else %}2{% endif %} alert alert-{{ profile.faction.class }} text-center text-responsive">
                         <i class="fa fa-fw fa-lg fa-trophy"></i>{{ achievement.name }}
-                        <small>({{ achievement.description }})</small>
+                        <s
+                                ll>({{ achievement.description }})</small>
                     </div>
                     {% endfor %}
                 </div>
